fix padding, aligning, font, headers

--- a/project_CSS/style.css
+++ b/project_CSS/style.css
@@ -1,11 +1,24 @@
-header{
-    background-color: pink;
+#header1{
+    background-color: #ff5fa2;
     text-align: center;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+    padding: 1%;
+}
 
+#header-nav{
+    background-color: #fe97a4;
+    text-align: center;
+    padding-top : 6%;
+    padding-bottom : .5%;
+}
+
+h5{
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 10%;
 }
 
 html, body{
@@ -13,4 +26,26 @@ html, body{
     padding: 0%;
     width: 100%;
     height: 100%;
+}
+
+.headerFont{
+    font-family: "Brush Script MT";
+    color: whitesmoke;
+    font-size: 175%;
+}
+
+section{
+    padding-top: 1%;
+    display: flex;
+    justify-content: space-around;
+    gap: 10%;
+    flex-wrap: wrap;
+}
+
+figure {
+    text-align: center;
+}
+
+#LatestMusic, #favStan{
+    padding-left: 35%;
 }
